--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE project [
-	<!ENTITY properties SYSTEM "file:../common-base/config/properties.xml">
-	<!ENTITY targets SYSTEM "file:../common-base/config/targets.xml">
+	<!ENTITY properties SYSTEM "file:../../cmf/common-base/config/properties.xml">
+	<!ENTITY targets SYSTEM "file:../../cmf/common-base/config/targets.xml">
 ]>
 
 <project name="tlumip" default="usage" basedir=".">
@@ -15,6 +15,7 @@
         <pathelement location="${common-base.dir}/build/classes"/>
         <pathelement location="${common-daf-v2.dir}/build/classes"/>
         <pathelement location="${common-assign.dir}/build/classes"/>
+        <pathelement location ="${hbaspecto.dir}/build/classes"/>
         <pathelement path="${build.classes.dir};${basedir}/config"/>
         
         <fileset dir="${common-base.dir}">
@@ -22,9 +23,7 @@
             <include name="**/lib/*.zip"/>
         </fileset>
 
-        <fileset dir="${jakarta-commons.dir}">
-            <include name="**/*.jar"/>
-        </fileset>
+
 
         <fileset dir="${basedir}">
             <include name="**/lib/*.jar"/>
@@ -38,6 +37,7 @@
     <target name="pre-build" depends="">
         <ant dir="${common-base.dir}" target="build" inheritAll="false"/>
         <ant dir="${common-daf-v2.dir}" target="build" inheritAll="false"/>
+        <ant dir="${hbaspecto.dir}" target="build" inheritAll="false"/>
         <ant dir="${common-assign.dir}" target="build" inheritAll="false"/>
     </target>
 
@@ -49,6 +49,7 @@
         <!-- copy dependencies to release directory -->
         <copy file="${common-base.dir}/release/common-base.jar" todir="${release.dir}"/>
         <copy file="${common-daf-v2.dir}/release/common-daf-v2.jar" todir="${release.dir}"/>
+        <copy file="${hbaspecto.dir}/release/hbaspecto.jar" todir="${release.dir}"/>
         <copy file="${common-assign.dir}/release/common-assign.jar" todir="${release.dir}"/>
     </target>
     
