removed build directories and .cvsignore files
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="/common-daf-v2"/>
 	<classpathentry kind="src" path="/common-assign"/>
 	<classpathentry kind="lib" path="/common-base/lib/commons-digester.jar"/>
-	<classpathentry kind="src" path="/hbaspecto"/>
+	<classpathentry exported="true" kind="src" path="/hbaspecto"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
