Option to generate some parameters from metaparameters
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@41 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/config/pi/pi.properties
+++ b/config/pi/pi.properties
@@ -24,6 +24,9 @@ pi.readHouseholdsByHHCategory=false
   # laborDollarProduction and the laborDollarConsumption csv files
 pi.oregonOutputs=false
 
+  # Set to true to generate some parameters from functions specified in the metaparams.csv
+pi.readMetaParameters=true
+
   # Paths for input and output files
 pi.base.data = /tlumip_data/
 pi.previous.data = /tlumip_data/
