updated to work with calibrator project
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@63 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
         <pathelement location="${common-base.dir}/build/classes"/>
         <pathelement location="${common-daf-v2.dir}/build/classes"/>
         <pathelement location="${common-assign.dir}/build/classes"/>
-        <pathelement location ="${hbaspecto.dir}/build/classes"/>
+        <pathelement location ="${calibrator.dir}/build/classes"/>
         <pathelement path="${build.classes.dir};${basedir}/config"/>
         
         <fileset dir="${common-base.dir}">
@@ -37,7 +37,7 @@
     <target name="pre-build" depends="">
         <ant dir="${common-base.dir}" target="build" inheritAll="false"/>
         <ant dir="${common-daf-v2.dir}" target="build" inheritAll="false"/>
-        <ant dir="${hbaspecto.dir}" target="build" inheritAll="false"/>
+        <ant dir="${calibrator.dir}" target="build" inheritAll="false"/>
         <ant dir="${common-assign.dir}" target="build" inheritAll="false"/>
     </target>
 
@@ -49,7 +49,7 @@
         <!-- copy dependencies to release directory -->
         <copy file="${common-base.dir}/release/common-base.jar" todir="${release.dir}"/>
         <copy file="${common-daf-v2.dir}/release/common-daf-v2.jar" todir="${release.dir}"/>
-        <copy file="${hbaspecto.dir}/release/hbaspecto.jar" todir="${release.dir}"/>
+        <copy file="${calibrator.dir}/release/calibrator.jar" todir="${release.dir}"/>
         <copy file="${common-assign.dir}/release/common-assign.jar" todir="${release.dir}"/>
     </target>
     
