git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@115 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/config/ts.properties
+++ b/config/ts.properties
@@ -6,6 +6,11 @@
 # -------------------------------------------------------------------
 
 
+
+# file locations for alphazone correspondence file   
+zoneIndex.fileName = /models/tlumip/scenario_pleaseWork/reference/alpha2beta.csv
+
+
 #################################################
 # Network related INPUT files for TS procedures #
 #################################################
@@ -41,6 +46,11 @@ d221.op.fileName = /models/tlumip/scenario_pleaseWork/t0/ts/optran.in
 ##################################################
 # Network related OUTPUT files for TS procedures #
 ##################################################
+
+## skim files based on the most recent highway traffic assignment results
+pkHwyDistSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/pkdist.zip
+pkHwyTimeSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/pktime.zip
+
 
 # peak walk-transit skims filenames
 pkWtSkim.fileNames = /models/tlumip/scenario_pleaseWork/t1/ts/pwtivt.zip \
