Crosstab targets for Calibrator
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@141 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>tlumip</name>
 	<comment></comment>
 	<projects>
+		<project>calibrator</project>
 		<project>common-assign</project>
 		<project>common-base</project>
 		<project>common-base-old</project>
