changes to write out skims at end of ts
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@143 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/config/ts.properties
+++ b/config/ts.properties
@@ -49,7 +49,16 @@ d221.op.fileName = /models/tlumip/scenario_pleaseWork/t0/ts/optran.in
 
 ## skim files based on the most recent highway traffic assignment results
 pkHwyDistSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/pkdist.zip
+opHwyDistSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/opdist.zip
 pkHwyTimeSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/pktime.zip
+opHwyTimeSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/optime.zip
+
+## beta skim files based on the most recent highway traffic assignment results
+pkHwyDistBetaSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/betapkdist.zip
+opHwyDistBetaSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/betaopdist.zip
+pkHwyTimeBetaSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/betapktime.zip
+opHwyTimeBetaSkim.fileName = /models/tlumip/scenario_pleaseWork/t1/ts/betaoptime.zip
+
 
 
 # peak walk-transit skims filenames
