Make calibrator use StringIndexedNDimensionalArrays (binary files).
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@159 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/config/pi/pi.properties
+++ b/config/pi/pi.properties
@@ -3,7 +3,7 @@
 pprocessor.class = com.pb.despair.pi.OregonPIPProcessor
 
   # Use these to control the PI runtime parameters
-pi.maxIterations = 400
+pi.maxIterations = 2
 pi.initialStepSize = 0.5
 pi.minimumStepSize = 0.1
 pi.maximumStepSize = 10.0
@@ -12,6 +12,9 @@ pi.converged = 100
   # Set to true if you want the Commodity Utility Calculations output at the end of a PI run
 pi.writeUtilityComponents=true
 
+# set to false if you don't need the zip matrices
+pi.writeFlowMatrices=false
+
   ## Set to true if you want PI to merge the ED activity $ data and the SPG household data
   ## into the ActivitiesI.csv file to create ActivitiesW.csv
 pi.oregonInputs=false
@@ -19,6 +22,10 @@ pi.oregonInputs=false
 pi.readActivityDollarDataForPI=false
   # merge SPG data
 pi.readHouseholdsByHHCategory=false
+
+# control the ascii vs binary zonal make use files
+pi.writeAsciiZonalMakeUse=false
+pi.writeBinaryZonalMakeUse=true
 
   # Set to true if you want PI to output the laborDollarProductionSum, laborDollarConsumptionSum
   # laborDollarProduction and the laborDollarConsumption csv files
