git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@263 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/config/ts.properties
+++ b/config/ts.properties
@@ -118,9 +118,13 @@ ct.fileName = /models/tlumip/scenario_pleaseWork/t1/ct/TruckTrips.csv
 # Assignment model related PARAMETERS for TS procedures #
 #########################################################
 
-
+# number of classes for multi-class highway assignment (auto and truck)
 NUM_AUTO_CLASSES = 2
-NUM_FW_ITERATIONS = 25
-TIME_PERIOD = 0
 
-MAX_TRANSIT_ROUTES = 300;
+# number of Frank-Wolfe algorithm iterations
+NUM_FW_ITERATIONS = 25
+ 
+# maximum number of routes defined in route file for each time period
+MAX_TRANSIT_ROUTES = 300
+
+
