Changed use of commons-digester from cmf/common-base/lib to third-party/jakarta-commons
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@284 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -4,8 +4,9 @@
 	<classpathentry kind="src" path="/common-base"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
 	<classpathentry kind="src" path="/common-assign"/>
-	<classpathentry kind="lib" path="/common-base/lib/commons-digester.jar"/>
 	<classpathentry kind="src" path="/calibrator"/>
 	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="/mtj"/>
+	<classpathentry kind="src" path="/jakarta-commons"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
