added some third-party jar files
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@300 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -22,12 +22,13 @@
             <include name="**/lib/*.zip"/>
         </fileset>
 
-
-
-        <fileset dir="${basedir}">
-            <include name="**/lib/*.jar"/>
-            <include name="**/lib/*.zip"/>
+        <fileset dir="${thirdParty.dir}">
+            <include name="**/logging-log4j-1.2.9/*.jar"/>
+            <include name="**/mtj/*.jar"/>
+            <include name="**/jakarta-commons/commons-digester-1.5/*.jar"/>
         </fileset>
+
+
     </path>
 
 
