New price search algorithm seems to be working now
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@310 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="/common-assign"/>
 	<classpathentry kind="src" path="/calibrator"/>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="/mtj"/>
 	<classpathentry kind="src" path="/jakarta-commons"/>
+	<classpathentry kind="src" path="/logging-log4j-1.2.9"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
