--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/common-base"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
-	<classpathentry kind="src" path="/common-assign"/>
 	<classpathentry kind="src" path="/calibrator"/>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="/jakarta-commons"/>
