git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@410 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="/common-base"/>
-	<classpathentry kind="src" path="/jakarta-commons"/>
-	<classpathentry kind="src" path="/logging-log4j-1.2.9"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
 	<classpathentry kind="src" path="/calibrator"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/jim/Util/svn_workspace/third-party/logging-log4j-1.2.9/log4j-1.2.9.jar"/>
+	<classpathentry kind="lib" path="C:/jim/Util/svn_workspace/third-party/jakarta-commons/commons-digester-1.5/commons-digester.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
