git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@518 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.project
+++ b/.project
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>tlumip</name>
 	<comment></comment>
 	<projects>
 		<project>calibrator</project>
-		<project>common-assign</project>
 		<project>common-base</project>
-		<project>common-base-old</project>
 		<project>common-daf-v2</project>
+		<project>pecas</project>
+		
 	</projects>
 	<buildSpec>
 		<buildCommand>
