requires Jakarta-Commons (doesn't it?)
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@639 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.project
+++ b/.project
@@ -6,8 +6,9 @@
 		<project>calibrator</project>
 		<project>common-base</project>
 		<project>common-daf-v2</project>
-		<project>pecas</project>
+		<project>jakarta-commons</project>
 		<project>logging-log4j-1.2.9</project>
+		<project>pecas</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
