--- a/.classpath
+++ b/.classpath
@@ -4,9 +4,9 @@
 	<classpathentry kind="src" path="/calibrator"/>
 	<classpathentry kind="src" path="/common-base"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
-	<classpathentry kind="src" path="/jakarta-commons"/>
 	<classpathentry kind="src" path="/logging-log4j-1.2.9"/>
 	<classpathentry kind="src" path="/pecas"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jakarta-commons"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
