--- a/.project
+++ b/.project
@@ -5,7 +5,8 @@
 	<projects>
 		<project>calibrator</project>
 		<project>common-base</project>
-		<project>common-daf-v2</project>
+		<project>jakarta-commons</project>
+		<project>logging-log4j-1.2.9</project>
 		<project>jakarta-commons</project>
 		<project>logging-log4j-1.2.9</project>
 		<project>pecas</project>
