added daf-v3 to the build path.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@722 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="/pecas"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jakarta-commons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/common-daf-v3"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
