implemented all person types for IDAP. added attributes for joint tour choice results to be saved in.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@1099 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/jakarta-commons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-daf-v3"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/censusdata"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/synpop"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
