household free parking eligibility choice model implementation for model estimated for ARC.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@1162 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,8 @@
         <pathelement location="${common-daf-v2.dir}/build/classes"/>
     	<pathelement location="${common-daf-v3.dir}/build/classes"/>
         <pathelement location ="${pecas.dir}/build/classes"/>
+        <pathelement location ="${censusdata.dir}/build/classes"/>
+        <pathelement location ="${synpop.dir}/build/classes"/>
         <pathelement path="${build.classes.dir};${basedir}/config"/>
         
         <fileset dir="${common-base.dir}">
@@ -45,6 +47,8 @@
         <ant dir="${common-daf-v2.dir}" target="build" inheritAll="false"/>
 	    <ant dir="${common-daf-v3.dir}" target="build" inheritAll="false"/>
         <ant dir="${pecas.dir}" target="build" inheritAll="false"/>
+        <ant dir="${censusdata.dir}" target="build" inheritAll="false"/>
+        <ant dir="${synpop.dir}" target="build" inheritAll="false"/>
     </target>
 
 
@@ -57,7 +61,9 @@
         <copy file="${common-daf-v2.dir}/release/common-daf-v2.jar" todir="${release.dir}"/>
     	<copy file="${common-daf-v3.dir}/release/common-daf-v3.jar" todir="${release.dir}"/>
         <copy file="${pecas.dir}/release/pecas.jar" todir="${release.dir}"/>
-	    <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
+        <copy file="${censusdata.dir}/release/censusdata.jar" todir="${release.dir}"/>
+        <copy file="${synpop.dir}/release/synpop.jar" todir="${release.dir}"/>
+        <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
     </target>
     
 </project>
