--- a/build.xml
+++ b/build.xml
@@ -13,9 +13,11 @@
     <!-- Setup the classpath -->
     <path id="compile.classpath">
         <pathelement location="${common-base.dir}/build/classes"/>
+        <pathelement location="${reference.dir}/build/classes"/>
         <pathelement location="${common-daf-v2.dir}/build/classes"/>
     	<pathelement location="${common-daf-v3.dir}/build/classes"/>
         <pathelement location ="${pecas.dir}/build/classes"/>
+        <pathelement location ="${pasaat.dir}/build/classes"/>
         <pathelement location ="${censusdata.dir}/build/classes"/>
         <pathelement location ="${synpop.dir}/build/classes"/>
         <pathelement path="${build.classes.dir};${basedir}/config"/>
@@ -42,11 +44,13 @@
 
     <!-- ********************************************************* -->
     <!-- Compile depedencies -->
-    <target name="pre-build" depends="">
+    <target name="pre-build" >
         <ant dir="${common-base.dir}" target="build" inheritAll="false"/>
+        <ant dir="${reference.dir}" target="build" inheritAll="false"/>
         <ant dir="${common-daf-v2.dir}" target="build" inheritAll="false"/>
 	    <ant dir="${common-daf-v3.dir}" target="build" inheritAll="false"/>
         <ant dir="${pecas.dir}" target="build" inheritAll="false"/>
+        <ant dir="${pasaat.dir}" target="build" inheritAll="false"/>
         <ant dir="${censusdata.dir}" target="build" inheritAll="false"/>
         <ant dir="${synpop.dir}" target="build" inheritAll="false"/>
     </target>
@@ -58,10 +62,12 @@
    
         <!-- copy dependencies to release directory -->
         <copy file="${common-base.dir}/release/common-base.jar" todir="${release.dir}"/>
+        <copy file="${reference.dir}/release/reference.jar" todir="${release.dir}"/>
         <copy file="${common-daf-v2.dir}/release/common-daf-v2.jar" todir="${release.dir}"/>
     	<copy file="${common-daf-v3.dir}/release/common-daf-v3.jar" todir="${release.dir}"/>
         <copy file="${pecas.dir}/release/pecas.jar" todir="${release.dir}"/>
         <copy file="${censusdata.dir}/release/censusdata.jar" todir="${release.dir}"/>
+        <copy file="${pasaat.dir}/release/pasaat.jar" todir="${release.dir}"/>
         <copy file="${synpop.dir}/release/synpop.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
     </target>
