Failed commit: Default
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@2540 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -34,8 +34,7 @@
 
         <fileset dir="${thirdParty.dir}">
             <include name="**/logging-log4j-1.2.9/*.jar"/>
-            <include name="**/mtj/*.jar"/>
-            <include name="**/jakarta-commons/commons-digester-1.5/*.jar"/>
+            <include name="**/mtj/*.jar"/>            
         </fileset>
 
 
@@ -70,6 +69,7 @@
         <copy file="${pasaat.dir}/release/pasaat.jar" todir="${release.dir}"/>
         <copy file="${synpop.dir}/release/synpop.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
+        <copy file="${thirdParty.dir}/mtj/mtj.jar" todir="${release.dir}"/>
     </target>
     
 </project>
