Added missing dependency
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@2560 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/common-daf-v3"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/censusdata"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/synpop"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/reference"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pasaat"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
