--- a/src/python/server/ClusterMachines.properties
+++ b/src/python/server/ClusterMachines.properties
@@ -1,5 +1,5 @@
-name    IP             PROCESSORS  RAM   OS
-Athena  192.168.1.221
-Chaos   192.168.1.222
-Dione   192.168.1.223
-Enyo    192.168.1.224
+name    IP             PROCESSORS  RAM   OS       Description
+Athena  192.168.1.221  4           8     Windows  "File server"
+Chaos   192.168.1.222  4           8     Windows  "Worker"
+Dione   192.168.1.223  4           8     Windows  "Worker"
+Enyo    192.168.1.224  4           8     Windows  "Worker"
