Added seam to referenced projects.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@3241 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/synpop"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/reference"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pasaat"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/seam"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
