git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@3630 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="src" path="/common-base"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
 	<classpathentry kind="src" path="/logging-log4j-1.2.9"/>
-	<classpathentry kind="src" path="/pecas"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common-daf-v3"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/censusdata"/>
@@ -13,5 +12,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/reference"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pasaat"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/seam"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pecas"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
