Added models/utils.  Only matters to Eclipse users.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@3821 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pasaat"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/seam"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pecas"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/utils"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
