--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="/common-base"/>
+	<classpathentry exported="true" kind="src" path="/common-base"/>
 	<classpathentry kind="src" path="/common-daf-v2"/>
 	<classpathentry kind="src" path="/logging-log4j-1.2.9"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/seam"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pecas"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/utils"/>
+	<classpathentry kind="lib" path="/common-base/release/common-base.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
