Update for TS->VISUM update.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6918 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
     	<pathelement location="${common-daf-v3.dir}/build/classes"/>
         <pathelement location ="${pecas.dir}/build/classes"/>
         <pathelement location ="${utils.dir}/build/classes"/>
-        <pathelement location ="${pasaat.dir}/build/classes"/>
+        <pathelement location ="${pasaat_swim.dir}/build/classes"/>
         <pathelement location ="${censusdata.dir}/build/classes"/>
         <pathelement location ="${synpop.dir}/build/classes"/>
         <pathelement path="${build.classes.dir};${basedir}/config"/>
@@ -51,7 +51,7 @@
 	    <ant dir="${common-daf-v3.dir}" target="build" inheritAll="false"/>
         <ant dir="${pecas.dir}" target="build" inheritAll="false"/>
         <ant dir="${utils.dir}" target="build" inheritAll="false"/>
-        <ant dir="${pasaat.dir}" target="build" inheritAll="false"/>
+        <ant dir="${pasaat_swim.dir}" target="build" inheritAll="false"/>
         <ant dir="${censusdata.dir}" target="build" inheritAll="false"/>
         <ant dir="${synpop.dir}" target="build" inheritAll="false"/>
     </target>
@@ -69,7 +69,7 @@
         <copy file="${pecas.dir}/release/pecas.jar" todir="${release.dir}"/>
         <copy file="${censusdata.dir}/release/censusdata.jar" todir="${release.dir}"/>
         <copy file="${utils.dir}/release/utils.jar" todir="${release.dir}"/>
-        <copy file="${pasaat.dir}/release/pasaat.jar" todir="${release.dir}"/>
+        <copy file="${pasaat_swim.dir}/release/pasaat.jar" todir="${release.dir}"/>
         <copy file="${synpop.dir}/release/synpop.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/mtj/mtj.jar" todir="${release.dir}"/>
