Updates fixing select link for latest update. SWIM-1
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6961 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -645,6 +645,8 @@ demand.output.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT
 sl.mode = @SL.MODE@
 sl.current.directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 
+sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/AllZones.csv
+
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
 sl.visum.mode = true
@@ -658,6 +660,7 @@ sl.auto.classes = a_peak,a_peak,a_peak,a_peak
 sl.truck.classes = a_peak,a_peak,a_peak,a_peak
 
 sl.output.file.select.link.results = selectLinkResults.csv
+sl.output.file.select.link.weaving = sl_weaving.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
