Added fix to allow aa to be constrained as needed. SWIM-4
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6970 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -370,7 +370,9 @@ aa.maxSpecificClearance=0.02
 aa.ConFac=.01
 
 # Constrained mode iteratively runs AA updating zonal constants to match ActivityConstraintsI.csv HH+empxbzone
-constrained=false
+# constrained years is a comma delimited list of t-years that should have constrained set to true
+constrained.years = 19
+constrained=@AA.CONSTRAINED@
 constraint.iterations=2
 constraint.smoothing=1.0
 constraint.maxConstantChange=2.5
