1) Delete the old config folder in the repo that is no longer used 2) Delete some additional files in the template setup that are not used 3) SI module now outputs the alpha2beta.csv, ActivityConstraintsI.csv, LandSQFTxZoning.csv, and FloorspaceInventory.csv files.  The previous version was wrong since it export what was imported into EMME, which was an incomplete set. 4) For calculating P2E density for LTF, read pop and emp from SWIM for each year as opposed to use the base data in the version file 5) set better globalTemplate.properties defaults for install at ODOT (i.e. VISUM Python location, use VISUM 13, DAF node memory, etc)
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6972 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -11,11 +11,12 @@ scenario.outputs.relative                             = @SCENARIO.NAME@/@SCENARI
 scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
-visum.version                                         = 12										
+visum.version                                         = 13										
 
 java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
-python.visum.executable    = @ROOT.DIR@/model/lib/Python25/python.exe
+# ensure the VISUM Python install can import numpy and VisumPy
+python.visum.executable    = C:/python26/python.exe
 r.executable         = @ROOT.DIR@/model/lib/R-2.15.0/bin/x64/R.exe
 seven.zip.executable = @ROOT.DIR@/model/lib/7za.exe
 
@@ -23,7 +24,7 @@ model.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/tlumip.jar;@ROOT.DIR@/@S
 cpu.factor = 0.8
 use.localhost = True
 
-daf.memory = 15000m
+daf.memory = 35000m
 daf.start.node.sleep.time = 15000
 daf.start.cluster.sleep.time = 15000
 daf.done.file.check.sleep.time = 100
@@ -59,7 +60,6 @@ stop.run.program = @ROOT.DIR@/@SCENARIO.NAME@/model/code/stop_run.bat
 model.run.history.file = @ROOT.DIR@/@SCENARIO.NAME@/run_history.zip
 model.save.run.history.program = @ROOT.DIR@/@SCENARIO.NAME@/model/code/model_runner/save_run_history.bat
 
-alpha2beta.file.base                                  = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/alpha2beta.csv
 alpha2beta.file                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
 alpha2beta.formats                                    = NUMBER, NUMBER, STRING, STRING, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, STRING, STRING, STRING, NUMBER, STRING, NUMBER, NUMBER
 alpha.name                                            =Azone
@@ -185,7 +185,7 @@ ald.ConstructionCosts = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 ald.LandSqft = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/LandSQFTxFLR.csv
 
 ## Scenario inputs
-ald.ZoningQuantities = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/LandSQFTxZoning.csv
+ald.ZoningQuantities = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/LandSQFTxZoning.csv
 ald.ZoningCompatibility = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/zoning_compatibility.csv
 ald.FloorAreaRatios = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/far.csv
 
@@ -604,6 +604,7 @@ et.basis.year = 8
 ta.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/SWIM_VISUM_Main.py
 ta.dependent.python.directory = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum
 ta.dependent.python.files = ['PlotChart.py','AssignmentQuality.py','TripLengthFrequency.py','VolumeStatistics.py']
+si.activityconstraintsi.worldmarkets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/ActivityConstraintsIWorldMarkets.csv
 si.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/si.properties
 ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ta.properties
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
@@ -632,7 +633,6 @@ ta.skim.matrix.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/h
 tr.skim.matrix.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/transitSkimMatrixNames.csv
 ta.imp.exp.fields = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/impExpFields.csv
 ta.los.info = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/losInfo.csv
-ta.visum.fields = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/visumFields.csv
 
 # sdt trips by time-of-day output file
 sdt.tod.trips.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/sdtTODTrips.csv
