fixed ALD input reference
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@6973 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -185,7 +185,7 @@ ald.ConstructionCosts = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 ald.LandSqft = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/LandSQFTxFLR.csv
 
 ## Scenario inputs
-ald.ZoningQuantities = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/LandSQFTxZoning.csv
+ald.ZoningQuantities = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/LandSQFTxZoning.csv
 ald.ZoningCompatibility = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/zoning_compatibility.csv
 ald.FloorAreaRatios = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/far.csv
 
