updated build script to build tlumip.jar with Eclipse; latest jar for template setup folder
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7084 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
     <!-- ********************************************************* -->
     <!-- Create a set of jar files for release -->
     <target name="release" depends="makejar">
-
+    	
         <!-- copy dependencies to release directory -->
         <copy file="${common-base.dir}/release/common-base.jar" todir="${release.dir}"/>
         <copy file="${reference.dir}/release/reference.jar" todir="${release.dir}"/>
@@ -73,6 +73,21 @@
         <copy file="${synpop.dir}/release/synpop.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/logging-log4j-1.2.9/log4j-1.2.9.jar" todir="${release.dir}"/>
         <copy file="${thirdParty.dir}/mtj/mtj.jar" todir="${release.dir}"/>
+    	
+    	<zip destfile="${release.dir}/tlumip.jar">
+			<zipgroupfileset dir="${release.dir}" includes="common-base.jar"/>
+    		<zipgroupfileset dir="${release.dir}" includes="reference.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="common-daf-v2.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="common-daf-v3.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="pecas.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="censusdata.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="utils.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="pasaat.jar"/>
+			<zipgroupfileset dir="${release.dir}" includes="synpop.jar"/>
+    		<zipgroupfileset dir="${release.dir}" includes="log4j-1.2.9.jar"/>
+    	</zip>
+    	
     </target>
+
     
 </project>
