SWIM-12: Check-in of HBA's modifications, including: -script updates to allow AA to run constrained in the bootstrap year -option size and floor space calibration -removal of Reno employment -various other fixes
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7217 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -11,7 +11,7 @@ scenario.outputs.relative                             = @SCENARIO.NAME@/@SCENARI
 scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
-visum.version                                         = 13										
+visum.version                                         = 14
 
 java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
@@ -300,7 +300,7 @@ aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r2777.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3140.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3409.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -324,9 +324,10 @@ output.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 pprocessor.class=com.hbaspecto.oregon.pecas.aa.OregonAAPProcessor
 pi.oregonOutputs=true
 aa.NEDandALDInputs=true
-aa.readHouseholdsByHHCategory=true
+aa.readHouseholdsByHHCategory=false
 aa.readActivityDollarDataForPI=true
-aa.updateImportsAndExports=true
+aa.updateImportsAndExports=false
+aa.visum=true
 
 aa.detailedCommodities=A1-Mgmt Bus,B1-Prof Specialty,B2-Education,B3-Health,B4-Technical Unskilled,C1-Sales Clerical Professionals,C2-Sales Service,C3-Clerical,C4-Sales Clerical Unskilled,D1-Production Specialists,D2-MaintConstRepair Specialists,D3-ProtectTrans Specialists,D4-Blue Collar Unskilled
 aa.oregonOccupations=A1-Mgmt Bus,B1-Prof Specialty,B2-Education,B3-Health,B4-Technical Unskilled,C1-Sales Clerical Professionals,C2-Sales Service,C3-Clerical,C4-Sales Clerical Unskilled,D1-Production Specialists,D2-MaintConstRepair Specialists,D3-ProtectTrans Specialists,D4-Blue Collar Unskilled
@@ -356,9 +357,7 @@ aa.makeTripMatrices=false
 
 # Run parameters
 aa.logFrequency = 25
-aa.maxIterations = 5
-#CHANGE BACK TO:
-#aa.maxIterations = 1200
+aa.maxIterations = 1200
 aa.initialStepSize = .002
 aa.minimumStepSize = .025
 aa.maximumStepSize = 2.5
